@@ -2,12 +2,9 @@ package com.food.ordering.system.order.service.dataaccess.restaurant.mapper;
 
 import com.food.ordering.system.dataaccess.restaurant.entity.RestaurantEntity;
 import com.food.ordering.system.dataaccess.restaurant.exception.RestaurantDataAccessException;
-import com.food.ordering.system.domain.valueobject.CustomerId;
 import com.food.ordering.system.domain.valueobject.Money;
 import com.food.ordering.system.domain.valueobject.ProductId;
 import com.food.ordering.system.domain.valueobject.RestaurantId;
-import com.food.ordering.system.order.service.dataaccess.customer.entity.CustomerEntity;
-import com.food.ordering.system.order.service.domain.entity.Customer;
 import com.food.ordering.system.order.service.domain.entity.Product;
 import com.food.ordering.system.order.service.domain.entity.Restaurant;
 import org.springframework.stereotype.Component;
@@ -18,6 +15,7 @@ import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
+
     public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
         return restaurant.getProducts().stream()
                 .map(product -> product.getId().getValue())
@@ -25,10 +23,14 @@ public class RestaurantDataAccessMapper {
     }
 
     public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
-        RestaurantEntity restaurantEntity = restaurantEntities.stream().findFirst().orElseThrow(() -> new RestaurantDataAccessException("Restaurant could not be found!"));
+        RestaurantEntity restaurantEntity =
+                restaurantEntities.stream().findFirst().orElseThrow(() ->
+                        new RestaurantDataAccessException("Restaurant could not be found!"));
+
         List<Product> restaurantProducts = restaurantEntities.stream().map(entity ->
-                new Product(new ProductId(entity.getProductId()), entity.getProductName(), new Money(entity.getProductPrice())))
-                .collect(Collectors.toList());
+                new Product(new ProductId(entity.getProductId()), entity.getProductName(),
+                        new Money(entity.getProductPrice()))).toList();
+
         return Restaurant.builder()
                 .restaurantId(new RestaurantId(restaurantEntity.getRestaurantId()))
                 .products(restaurantProducts)
